<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_service">Cost of Service</string>
    <string name="how_the_service">How was the service?</string>
    <string name="amazing">Amazing(20%)</string>
    <string name="good">Good(18%)</string>
    <string name="ok">Ok(15%)</string>
    <string name="round_tip">Round up tip?</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="calculate">CALCULATE</string>
</resources>