<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/input"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/cost_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/the_service"
        android:text="@string/how_the_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/input"
        app:layout_constraintStart_toStartOf="parent"/>


    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/the_service"
        app:layout_constraintStart_toStartOf="parent">
        <RadioButton
            android:id="@+id/button_amazing"
            android:text="@string/amazing"
            android:textSize="20dp"
            android:buttonTint="@color/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/the_service"
            app:layout_constraintStart_toStartOf="parent"/>

        <RadioButton
            android:id="@+id/button_good"
            android:text="@string/good"
            android:textSize="20dp"
            android:buttonTint="@color/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/button_amazing"
            app:layout_constraintStart_toStartOf="parent"/>

        <RadioButton
            android:id="@+id/button_ok"
            android:text="@string/ok"
            android:textSize="20dp"
            android:buttonTint="@color/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/button_good"
            app:layout_constraintStart_toStartOf="parent"/>


    </RadioGroup>


    <TextView
        android:id="@+id/tip"
        android:text="@string/round_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/button"
        app:layout_constraintTop_toTopOf="@id/tip"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/calculate"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tip"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/tip_amount"
        app:layout_constraintTop_toBottomOf="@id/button_calculate"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/baseline_add_card_24"
        app:layout_constraintTop_toBottomOf="@id/button_calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>